// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UnevenItemsScrollSlider /> <UnevenItemsScrollSlider /> - props should render correctly with additional props 1`] = `
<UnevenItemsScrollSlider
  activeItem={0}
  className="dummyClassName"
  containerRef={
    Object {
      "current": null,
    }
  }
  goTo={[MockFunction]}
  isRTL={false}
  itemsLength={5}
  ratioToScroll={1}
  setItemsLength={[MockFunction]}
>
  <div
    key="0"
  >
    First slide
  </div>
  <div
    key="1"
  >
    Second slide
  </div>
  <div
    key="2"
  >
    Third slide
  </div>
  <div
    key="3"
  >
    Fourth slide
  </div>
</UnevenItemsScrollSlider>
`;

exports[`<UnevenItemsScrollSlider /> <UnevenItemsScrollSlider /> - props should render correctly with the required props 1`] = `
<UnevenItemsScrollSlider
  activeItem={0}
  containerRef={
    Object {
      "current": null,
    }
  }
  goTo={[MockFunction]}
  isRTL={false}
  itemsLength={5}
  ratioToScroll={1}
  setItemsLength={[MockFunction]}
>
  <div
    key="0"
  >
    First slide
  </div>
  <div
    key="1"
  >
    Second slide
  </div>
  <div
    key="2"
  >
    Third slide
  </div>
  <div
    key="3"
  >
    Fourth slide
  </div>
</UnevenItemsScrollSlider>
`;
